--- a/src/index.css
+++ b/src/index.css
@@ -13,21 +13,15 @@ body {
   height: 100vh;
 }
 
-#root,
-.univer__wrapper {
+#root {
   padding: 0;
   margin: 0;
   height: 100%;
 }
 
 .univer__app {
-  height: calc(100% - 100px);
-  width: 100%;
-}
-
-.univer__sidebar {
-  padding: 1rem;
-  height: 100px;
+  height: 100%;
+  overflow: hidden;
 }
 
 @theme inline {
